syntax = "proto3";

option java_multiple_files = true;

package com.example.grpc;


message AddCartRequest {
  int64 userId = 1;
}

message AddCartResponse {
  bool ok = 1;
}


service AddCartService {
  rpc AddCart(AddCartRequest) returns (AddCartResponse);
}
